fixed save button visible on Sale Add page on iPhone 6

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -278,6 +278,10 @@ align-items: center;
   height: 236px;
 }
 
+/*.ss568{
+  height: 324px;
+}*/
+
 .ss568{
   height: 324px;
 }
